(Fix) Lodash version This PR fixes CVE-2019-10744 Vulnerable versions: < 4.17.13 Patched version: 4.17.13 Affected versions of lodash are vulnerable to Prototype Pollution. The function defaultsDeep could be tricked into adding or modifying properties of Object.prototype using a constructor payload.

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "jest-localstorage-mock": "^2.4.0",
     "json2csv": "^4.5.0",
     "leaflet": "^1.4.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.14",
     "lodash.clonedeep": "^4.5.0",
     "minimist": "1.2.0",
     "mock-local-storage": "^1.1.8",
